--- a/main/static/main/leaderboards.css
+++ b/main/static/main/leaderboards.css
@@ -11,10 +11,51 @@ body{
 .table{
     display: grid;
     color:white;
-    margin:20%;
-    margin-left: 5%;
-    margin-top: 50%;
+    margin-left: 6%;
+    margin-top: 15%;
     height: 20vh;
-    width:100vw;
     color:#c8c7bd;
+}
+
+th{
+    font-size: 80%;
+}
+
+.header{
+    color:#c8c7bd;
+    margin-top:25%;
+    max-width: 45vh;
+}
+.nav{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10%;
+    width: 100%;
+}
+.nav span{
+    color:#c8c7bd;
+}
+#logo{
+    font-size: 4vh;
+    color:#e0b513;
+}
+
+.filter-time{
+    background-color:#2c2e31;
+    color:#c8c7bd;
+    margin-top: 15%;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+a{
+    text-decoration: none;
+    color:#c8c7bd;
+}
+
+a:hover, .nav span:hover{
+    font-weight: bold;
+    color:#e0b513;
+    
 }
