--- a/main/static/main/leaderboards.css
+++ b/main/static/main/leaderboards.css
@@ -11,9 +11,10 @@ body{
 .table{
     display: grid;
     color:white;
-    margin-left: 6%;
     margin-top: 15%;
-    height: 20vh;
+    margin-left: 7%;
+    height: 40vh;
+    width: 85%;
     color:#c8c7bd;
 }
 
@@ -25,6 +26,7 @@ th{
     color:#c8c7bd;
     margin-top:25%;
     max-width: 45vh;
+    margin-left: 7%;
 }
 .nav{
     display: flex;
