add authentication for signup

--- a/main/templates/main/auth.html
+++ b/main/templates/main/auth.html
@@ -18,8 +18,7 @@
         </h2>
 
         <div class="field">
-            <input type="text" placeholder="username" id="singUp-user">
-            <p class="error">invalid username</p>
+            <input type="text" placeholder="username" id="signUp-user">
         </div>
 
         <div class="field">
@@ -28,12 +27,11 @@
 
         <div class="field">
             <input type="password" placeholder="password" id="signUp-pass-1">
-            <p class="error">invalid password</p>
         </div>
 
         <div class="field">
             <input type="password" placeholder="verify password" id="signUp-pass-2">
-            <p class="error">passwords do not match</p>
+            <p class="error" id="signUp-error">passwords do not match</p>
         </div>
 
         <button class="primary-btn" id="signUp-btn">
