--- a/main/templates/main/leaderboards.html
+++ b/main/templates/main/leaderboards.html
@@ -36,7 +36,7 @@
             account_box
             </span>
         </a>
-        <a href="#" title="logout">
+        <a href="{% url 'logout' %}" title="logout">
             <span class="material-symbols-outlined">
             logout
         </span>
