--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -137,6 +137,6 @@
 
  
 
-  <script src="{% static 'main/home.css' %}"></script>
+  <script src="{% static 'main/home.js' %}"></script>
 </body>
 </html>
