--- a/main/templates/main/leaderboards.html
+++ b/main/templates/main/leaderboards.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="#">
+        <a href="{%url 'home'%}" title="home">
             <span class="material-symbols-outlined" id="logo">
             keyboard_full
             </span>
@@ -26,7 +26,7 @@
             crown
             </span>
         </a>
-        <a href="#" title="about us">
+        <a href="https://monkeytype.com/about" title="about us">
             <span class="material-symbols-outlined">
             info_i
             </span>
