--- a/main/templates/main/leaderboards.html
+++ b/main/templates/main/leaderboards.html
@@ -26,7 +26,7 @@
             crown
             </span>
         </a>
-        <a href="https://monkeytype.com/about" title="about us">
+        <a href="https://monkeytype.com/about" title="about">
             <span class="material-symbols-outlined">
             info_i
             </span>
