--- a/main/templates/main/stat.html
+++ b/main/templates/main/stat.html
@@ -44,7 +44,7 @@
 <!-- MAIN CONTENT -->
 <main class="container">
 
-  <!-- BIG STATS -->
+  <!-- BIG STATS and ther is-->
   <div class="big-stats">
     <div class="big">
       <span class="label">wpm</span>
